--- a/requirements.txt
+++ b/requirements.txt
@@ -11,6 +11,7 @@ pyasn1==0.5.1
 pydantic==2.5.1
 pydantic-settings==2.1.0
 pydantic_core==2.14.3
+pydantic-extra-types == 2.1.0
 python-dotenv==1.0.0
 python-jose==3.3.0
 rsa==4.9
